# LangAPI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
decision_records/: ADR-004-structlog-implementation.yaml  ADR-004-structured-logging.yaml  ADR-006-three-tier-error-handling.yaml  ADR-008-prometheus-metrics.yaml  ADR-009-docker-multi-stage.yaml  ADR-010-docker-monitoring.yaml
decision_records/implemented/: ADR-001-framework-and-model-choice.yaml  ADR-002-eager-model-loading.yaml  ADR-003-service-layer-no-protocol.yaml  ADR-004-structlog-implementation.yaml  ADR-005-concrete-marian-classes.yaml  ADR-007-grafana-dashboard.yaml  ADR-009-docker-multi-stage.yaml  ADR-011-cpu-only-pytorch.yaml  ADR-012-testing-without-real-models.yaml  ADR-013-sync-route-handlers.yaml
decision_records/proposed/: ADR-014-translation-quality-evaluation.yaml  ADR-015-user-feedback-loop.yaml  ADR-016-input-safeguarding.yaml
lang_api/: __init__.py  main.py
lang_api/api/: __init__.py  dependencies.py  middleware.py  routes.py  schemas.py
lang_api/core/: __init__.py  app.py  config.py  logging.py  metrics.py
lang_api/models/: __init__.py  services.py
monitoring/grafana/provisioning/dashboards/: dashboards.yml  langapi.json
monitoring/prometheus/: prometheus.yml
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_middleware.py  test_routes.py  test_schemas.py
tests/core/: __init__.py  test_config.py  test_logging.py  test_metrics.py
tests/models/: __init__.py  test_services.py
