[project]
name = "lang-api"
version = "0.1.0"
description = "RESTful API serving a translation language model"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings",
    "fastapi",
    "uvicorn",
    "transformers",
    "torch",
    "sentencepiece",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
    "httpx",
    "pre-commit",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "SIM", "C4"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
    "ignore::UserWarning:transformers.models.marian",
    "ignore::DeprecationWarning:sys",
]
